decodebin: Check if value is set before unsetting it

https://bugzilla.gnome.org/show_bug.cgi?id=693401